--- a/server/templates/control.html
+++ b/server/templates/control.html
@@ -67,7 +67,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-  // Remet automatiquement le focus dans l’input après envoi
+  // remet automatiquement le focus dans l’input après envoi
   window.onload = function() {
     const input = document.querySelector('input[name="command"]');
     if (input) {
